tests/integration/lsp/workspace/snapshots/integration__lsp__workspace__symbol__filter_type_math.snap
---
source: tests/integration/lsp/workspace/symbol.rs
assertion_line: 139
expression: result.actual_symbols
---
[
  {
    "deprecated": false,
    "kind": 14,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 9,
          "character": 0
        },
        "end": {
          "line": 11,
          "character": 14
        }
      }
    },
    "name": "Equation (1)"
  },
  {
    "deprecated": false,
    "kind": 13,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 33,
          "character": 0
        },
        "end": {
          "line": 35,
          "character": 11
        }
      }
    },
    "name": "Lemma 1 (Qux)"
  }
]
